--- a/Task3-Update-CSS-Variables-with-JS/index.html
+++ b/Task3-Update-CSS-Variables-with-JS/index.html
@@ -14,18 +14,19 @@
       <div class="header">
       <h1><span class="header-text-one">Update CSS variables with</span> <span class="header-text-two">JS</span></h1></div>
 <div class="inputs">
-        <label for="spacing-vol">Spacing:</label>
-        <input type="range" id="spacing-vol" name="spacing-vol" min="0" max="100" value="0" data-sizing="px">
+        <label for="spacing">Spacing:</label>
+        <input type="range" id="spacing" name="spacing" min="0" max="25" value="0" data-sizing="px">
 
-        <label for="blur-vol">Blur:</label>
-        <input type="range" id="blur-vol" name="blur-vol" min="0" max="100" value="0" data-sizing="px">
+        <label for="blur">Blur:</label>
+        <input type="range" id="blur" name="blur" min="0" max="10" value="0" data-sizing="px">
 
-        <label for="fav-color">Base color:</label>
-        <input type="color" id="fav-color" name="fav-color" value="#f1ca1c">
+        <label for="base">Base color:</label>
+        <input type="color" id="base" name="base" value="#f1ca1c">
     </div>
     <div class="image">
       <img src="kam-idris-_HqHX3LBN18-unsplash.jpg" alt="">
     </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
