--- a/Task-6-Ajax-Type-Ahead/index.html
+++ b/Task-6-Ajax-Type-Ahead/index.html
@@ -8,7 +8,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <input type="text" class="input-text" name="input-text" />
+    <form class="search-form">
+      <input type="text" class="search" name="search" />
+      <ul class="suggestions">
+        <li>Filter for a city</li>
+        <li>or a state</li>
+      </ul>
+    </form>
     <script src="script.js"></script>
   </body>
 </html>
