updated my solution to task 13 and made it more sustainable

--- a/Task13-Slide-In-On-Scroll/index.html
+++ b/Task13-Slide-In-On-Scroll/index.html
@@ -57,11 +57,7 @@
           dignissimos.
         </p>
 
-        <img
-          src="http://unsplash.it/400/400"
-          class="align-left slide-in"
-          id="first-img"
-        />
+        <img src="http://unsplash.it/400/400" class="align-left" />
 
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates,
@@ -78,11 +74,7 @@
           doloribus. Eum dolorum expedita quam, nesciunt
         </p>
 
-        <img
-          src="http://unsplash.it/400/401"
-          class="align-right slide-in"
-          id="second-img"
-        />
+        <img src="http://unsplash.it/400/401" class="align-right" />
 
         <p>
           at provident praesentium atque quas rerum optio dignissimos
@@ -121,11 +113,7 @@
           amet autem dolor ullam.
         </p>
 
-        <img
-          src="http://unsplash.it/200/500"
-          class="align-left slide-in"
-          id="third-img"
-        />
+        <img src="http://unsplash.it/200/500" class="align-left" />
 
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio
@@ -133,11 +121,7 @@
           Quibusdam saepe aperiam explicabo placeat optio, consequuntur nihil
           voluptatibus expedita quia vero perferendis, deserunt et incidunt
           eveniet
-          <img
-            src="http://unsplash.it/200/200"
-            class="align-right slide-in"
-            id="fourth-img"
-          />
+          <img src="http://unsplash.it/200/200" class="align-right" />
           temporibus doloremque possimus facilis. Possimus labore, officia
           dolore! Eaque ratione saepe, alias harum laboriosam deserunt
           laudantium blanditiis eum explicabo placeat reiciendis labore iste
@@ -174,11 +158,7 @@
           neque.
         </p>
 
-        <img
-          src="http://unsplash.it/400/400"
-          class="align-right slide-in"
-          id="fifth-img"
-        />
+        <img src="http://unsplash.it/400/400" class="align-right" />
 
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio
@@ -217,6 +197,7 @@
           ut! Tempore non magnam, amet, facere ducimus accusantium eos veritatis
           neque.
         </p>
+        <img src="http://unsplash.it/400/400" class="align-left" />
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio
           maiores adipisci quibusdam repudiandae dolor vero placeat esse sit!
